hello-world-api/svc-cluster.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-api-svc
spec:
  selector:
    app: hello-world-api
  ports:
    - protocol: TCP
      port: 3080
      targetPort: 80
