hello-world-api/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-api-svc
spec:
  type: NodePort
  selector:
    app: hello-world-api
  ports:
    - nodePort: 32410
      protocol: TCP
      port: 80
      targetPort: 80
